# 重大更新 > ⚠️,当前版本为过渡版本,部分功能不可使用 - SpringBoot 升级至 SpringBoot 3.x版本 - 重构ValueProvider为Function - 新增调用堆栈设计 - 新增节点管理器,执行器,调度器等核心组件 ## API调整 - 新增统一分页处理 - 新增统一结果封装 - 添加对ANTD参数的自动解析 ## 核心调整 - 新增ILoopReferenceContext设计,用于存放循环引用的图状数据 - 重构TypeDefinition,Parameter等核心Service,支持ILoopReferenceContext - 重构Message设计 - 重构序列化机制 - 新增断点支持 - 新增接入码机制